# netcode

./: .gitignore  CMakeLists.txt  Doxyfile.in  LICENSE  README.md  foo.cc
accelerator/: CMakeLists.txt  client.cc  decoder.cc  encoder.cc  server.cc  transcoder.hh
code/: main.cpp
code.xcodeproj/: project.pbxproj
code.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
doc/doxygen/: Doxyfile.in
doc/examples/: CMakeLists.txt  resize_packet.cc
examples/: CMakeLists.txt
examples/accelerator/: CMakeLists.txt  README.txt  accelerator.cc  transcoder.hh
examples/accelerator-oneway/: CMakeLists.txt  receiver.cc  sender.cc
examples/basic/: CMakeLists.txt  README.txt  c_basic.c  cpp_basic.cc
examples/c/: CMakeLists.txt  example_c.c
ext/asio/asio/: error.hpp
galois/: multiply.hh
netcode/: CMakeLists.txt  cnetcode.cc  cnetcode.h  code.hh  code_type.hh  coding.hh  configuration.hh  data.hh  decoder.hh  decoder_fwd.hh  dispatch.hh  doxygen.hh  encoder.hh  encoder_fwd.hh  errors.hh  handler.hh  in_order.hh  packet.hh  packetizer.hh  protocol.hh  repair.hh  source.hh  symbol.hh  systematic.hh  types.hh
netcode.xcodeproj/: project.pbxproj
netcode/c/: configuration.cc  configuration.h  data.cc  data.h  decoder.cc  decoder.h  encoder.cc  encoder.h  error.h  errors.h  handlers.h  packet.cc  packet.h
netcode/c/detail/: check_error.hh  handlers.hh  noexcept.hh  types.hh
netcode/detail/: ack.h  ack.hh  allocator.hh  buffer.hh  code.hh  coefficient.cc  coefficient.hh  decoder.cc  decoder.hh  encoder.cc  encoder.hh  galois_field.hh  handler.hh  invert_matrix.cc  invert_matrix.hh  make_packetizer.hh  make_protocol.hh  multiple.hh  packet_type.hh  packetizer.hh  packetizer_base.hh  packetizer_simple.hh  raw_buffer.hh  reconstruct.hh  repair.hh  serialize_packet.hh  serialize_packet_fwd.hh  serializer.hh  source.hh  source_id_list.hh  source_list.hh  square_matrix.hh  symbol_alignment.hh  symbol_base.hh  symbol_buffer.hh  traits.hh  types.hh  visibility.hh
netcode/detail/protocol/: simple.hh
netcode/galois/: field.hh  multiply.hh
tests/: CMakeLists.txt  compilation.cc  end_to_end.cc  end_to_end_mt.cc  test_end_to_end.cc  tests.cc
tests/netcode/: common.hh  encoder.cc  launch.hh  symbol.cc  test_data.cc  test_decoder.cc  test_encoder.cc  test_packet.cc  test_reconstruction.cc  test_symbol.cc
tests/netcode/c/: handlers.h  test_data.cc  test_decoder.cc
tests/netcode/detail/: test_buffer.cc  test_decoder.cc  test_encoder.cc  test_galois_field.cc  test_invert_matrix.cc  test_packetizer.cc  test_packetizer_simple.cc  test_raw_buffer.cc  test_reconstruct.cc  test_serialize_packet.cc  test_source_list.cc  test_square_matrix.cc
tests/netcode/detail/protocol/: simple.cc  test_simple.cc
tools/: CMakeLists.txt  forward.cc  loss.hh  lossy_proxy.cc  replay.cc  source_forwarder.cc  udp_generator.py
tools/loss/: burst.hh  file.hh  stream.hh  uniform.hh
